deployments/workloads/media/bazarr/cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bazarr
spec:
  endpointSelector:
    matchLabels:
      app: bazarr
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "6767"
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: api.opensubtitles.com
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
